--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "export": "next export"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/material": "^5.8.7",
     "bignumber.js": "^9.0.2",
     "magic-sdk": "^8.1.1",
     "next": "12.1.6",
