--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.8.7",
     "bignumber.js": "^9.0.2",
+    "eip-712": "^1.0.0",
     "grommet": "^2.25.0",
     "magic-sdk": "^8.1.1",
     "next": "12.1.6",
