--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@
 # next.js
 /.next/
 /out/
-/pages/api
 
 # production
 /build
@@ -31,3 +30,6 @@ yarn-error.log*
 
 # vercel
 .vercel
+
+# keys
+/pages/api/keys.json
