--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.8.7",
+    "@web3uikit/core": "^0.1.4",
+    "@web3uikit/icons": "^0.1.4",
+    "@web3uikit/web3": "^0.1.4",
     "bignumber.js": "^9.0.2",
     "eip-712": "^1.0.0",
     "grommet": "^2.25.0",
     "magic-sdk": "^8.1.1",
+    "moralis": "^1.11.0",
     "next": "12.1.6",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-moralis": "^1.4.0",
-    "react-router-dom": "^6.3.0",
-    "web3uikit": "^0.1.161"
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
