--- a/package.json
+++ b/package.json
@@ -13,20 +13,23 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.8.7",
+    "@rainbow-me/rainbowkit": "^0.5.0",
     "@web3uikit/core": "^0.1.4",
     "@web3uikit/icons": "^0.1.4",
-    "@web3uikit/web3": "^0.1.4",
+    "@web3uikit/web3": "^0.1.5",
     "bignumber.js": "^9.0.2",
     "dotenv": "^16.0.1",
     "eip-712": "^1.0.0",
+    "ethers": "^5.7.0",
     "grommet": "^2.25.0",
     "magic-sdk": "^8.1.1",
-    "moralis": "^1.11.0",
+    "moralis": "^1.8.0",
     "next": "12.1.6",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-moralis": "^1.4.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "wagmi": "^0.6.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
