--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.3.0",
+    "sharp": "^0.31.1",
     "wagmi": "^0.6.4"
   },
   "devDependencies": {
