update app page ui

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "lenft-interface",
   "version": "0.1.0",
   "private": true,
+  "resolutions": {
+    "ethereumjs-abi": "https://registry.npmjs.org/ethereumjs-abi/-/ethereumjs-abi-0.6.8.tgz"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
