--- a/package.json
+++ b/package.json
@@ -26,8 +26,12 @@
     "ethers": "^5.7.0",
     "grommet": "^2.25.0",
     "magic-sdk": "^8.1.1",
+    "moment": "^2.29.4",
     "next": "12.1.6",
+    "node-sass": "^7.0.3",
     "react": "^18.2.0",
+    "react-awesome-button": "^7.0.4",
+    "react-countdown": "^2.3.3",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.3.0",
     "sharp": "^0.31.1",
