--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.8.7",
+    "@nextui-org/react": "^1.0.0-beta.11",
     "@rainbow-me/rainbowkit": "^0.5.0",
     "@web3uikit/core": "^0.1.4",
     "@web3uikit/icons": "^0.1.4",
