--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.8.7",
     "@nextui-org/react": "^1.0.0-beta.11",
     "@rainbow-me/rainbowkit": "^0.5.0",
