--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "react-dom": "18.2.0",
     "react-router-dom": "^6.3.0",
     "sharp": "^0.31.1",
+    "timeago-react": "^3.0.5",
+    "timeago.js": "^4.0.2",
     "wagmi": "^0.6.4"
   },
   "devDependencies": {
