--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "moment": "^2.29.4",
     "next": "12.1.6",
     "node-sass": "^7.0.3",
+    "nodemailer": "^6.9.4",
     "react": "^18.2.0",
     "react-awesome-button": "^7.0.4",
     "react-countdown": "^2.3.3",
